src/seqvars/query/schema/snapshots/varfish_server_worker__seqvars__query__schema__data__tests__sequence_variant_from_vcf@Case_1.ingested.vcf-24.snap
---
source: src/seqvars/query/schema/data.rs
expression: "&seqvar"
---
vcf_variant:
  chrom: MT
  pos: 1243
  ref_allele: T
  alt_allele: C
call_infos:
  Case_1_father-N1-DNA1-WGS1:
    sample: Case_1_father-N1-DNA1-WGS1
    genotype: /0/0
    quality: 99
    dp: 2675
    ad: 1
    phasing_id: ~
  Case_1_index-N1-DNA1-WGS1:
    sample: Case_1_index-N1-DNA1-WGS1
    genotype: /1/1
    quality: 99
    dp: 2198
    ad: 2198
    phasing_id: ~
  Case_1_mother-N1-DNA1-WGS1:
    sample: Case_1_mother-N1-DNA1-WGS1
    genotype: /1/1
    quality: 99
    dp: 1655
    ad: 1655
    phasing_id: ~
ann_fields: []
population_frequencies:
  gnomad_exomes:
    an: 0
    hom: 0
    het: 0
    hemi: 0
  gnomad_genomes:
    an: 0
    hom: 0
    het: 0
    hemi: 0
  gnomad_mtdna:
    an: 0
    hom: 0
    het: 0
  helixmtdb:
    an: 0
    hom: 0
    het: 0
  inhouse:
    hom: 0
    het: 0
    hemi: 0
    total: 0
