src/seqvars/query/schema/snapshots/varfish_server_worker__seqvars__query__schema__data__tests__sequence_variant_from_vcf@Case_1.ingested.vcf-28.snap
---
source: src/seqvars/query/schema/data.rs
expression: "&seqvar"
---
vcf_variant:
  chrom: MT
  pos: 2706
  ref_allele: A
  alt_allele: G
call_infos:
  Case_1_father-N1-DNA1-WGS1:
    sample: Case_1_father-N1-DNA1-WGS1
    genotype: /0/0
    gq: 99
    dp: 3200
    ad: 0
    ps: ~
  Case_1_index-N1-DNA1-WGS1:
    sample: Case_1_index-N1-DNA1-WGS1
    genotype: /1/1
    gq: 99
    dp: 2847
    ad: 2847
    ps: ~
  Case_1_mother-N1-DNA1-WGS1:
    sample: Case_1_mother-N1-DNA1-WGS1
    genotype: /1/1
    gq: 99
    dp: 2020
    ad: 2020
    ps: ~
ann_fields: []
population_frequencies:
  gnomad_exomes:
    an: 0
    hom: 0
    het: 0
    hemi: 0
  gnomad_genomes:
    an: 0
    hom: 0
    het: 0
    hemi: 0
  gnomad_mtdna:
    an: 0
    hom: 0
    het: 0
  helixmtdb:
    an: 0
    hom: 0
    het: 0
  inhouse:
    an: 0
    hom: 0
    het: 0
    hemi: 0
